@@ -21,7 +21,7 @@ export("?", .DollarNames, .S3methods, CRAN.packages, Rprof, Rprofmem, RShowDoc,
        getSrcDirectory, getSrcFilename, getSrcLocation, getSrcref,
        glob2rx, globalVariables, head, head.matrix, help,
        help.request, help.search, help.start, history,
-       install.packages, installed.packages, is.relistable,
+       install.packages, installed.packages, is.relistable, isS3method,
        limitedLabels, loadhistory, localeToCharset, ls.str, lsf.str,
        maintainer, make.packages.html, make.socket, memory.limit,
        memory.size, menu, methods, mirror2html, modifyList,
